; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_merge.c_merge_dir_closed.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_merge.c_merge_dir_closed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svn_diff_tree_processor_t = type { i32* }
%struct.merge_dir_baton_t = type { i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i32*, i8*, %struct.svn_diff_tree_processor_t*, i32*)* @merge_dir_closed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @merge_dir_closed(i8* %0, i32* %1, i32* %2, i8* %3, %struct.svn_diff_tree_processor_t* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.svn_diff_tree_processor_t*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.merge_dir_baton_t*, align 8
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i8* %3, i8** %10, align 8
  store %struct.svn_diff_tree_processor_t* %4, %struct.svn_diff_tree_processor_t** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load %struct.svn_diff_tree_processor_t*, %struct.svn_diff_tree_processor_t** %11, align 8
  %16 = getelementptr inbounds %struct.svn_diff_tree_processor_t, %struct.svn_diff_tree_processor_t* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %13, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = bitcast i8* %18 to %struct.merge_dir_baton_t*
  store %struct.merge_dir_baton_t* %19, %struct.merge_dir_baton_t** %14, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = load %struct.merge_dir_baton_t*, %struct.merge_dir_baton_t** %14, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = call i32 @handle_pending_notifications(i32* %20, %struct.merge_dir_baton_t* %21, i32* %22)
  %24 = call i32 @SVN_ERR(i32 %23)
  %25 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %25
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @handle_pending_notifications(i32*, %struct.merge_dir_baton_t*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
